--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,8 +11,9 @@ buildscript {
         ndkVersion = "23.1.7779620"
     }
     repositories {
-        maven{ url 'https://maven.aliyun.com/repository/google'}
-        google()
+        maven { url 'https://maven.aliyun.com/repository/google'}
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        google()
         mavenCentral()
     }
     dependencies {
