--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "18.2.0",
+    "react-devtools": "^5.3.1",
     "react-native": "0.72.17"
   },
   "devDependencies": {
