feat:课表基本完成
- 课表样式基本完成；
- TODO:课表入参数据json形式待确定；
- TODO:周次选择未完成；

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "18.2.0",
     "react-devtools": "^5.3.1",
     "react-native": "0.72.17"
