--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-devtools": "^5.3.1",
     "react-native": "0.72.17",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-svg": "^15.7.1"
   },
   "devDependencies": {
